scss/partials/_secure_activity.scss
div.secure-activity-container {
  width: 100%;
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  background-color: white;
  min-height: 100vh;

  div.activity-header {
    height: 72px;
    position: fixed;
    width: 100%;
    background-color: white;
    padding: 16px 32px;
    box-shadow: 0 1px 1.5px 0 rgba(0, 0, 0, 0.05);
    text-align: center;
    z-index: 10;

    div.org-avatar {
      height: 40px;
      position: absolute;
      left: 50%;
      margin-left: -20px;

      div.org-avatar-container {
        height: 40px;
        div.org-avatar-border {
          height: 40px;

          img.org-avatar-img {
            max-width: 120px;
            max-height: 40px;
          }
        }
      }
    }
  }

  div.activity-content-outer {
    margin: 0px auto 32px;
    width: 840px;
    transition: margin-left 230ms;

    div.activity-content {
      min-height: 136px;
      padding: 68px 80px 32px;
      border-radius: 8px;

      div.activity-banner {
        margin-left: -80px;
        margin-top: 50px;
        margin-bottom: 20px;
        width: 840px;
        max-height: 520px;
        background-position: 50%;
        background-size: cover;
        background-repeat: no-repeat;
        // border-radius: 8px;
        // border-top-left-radius: 8px;
        // border-top-right-radius: 8px;
      }

      div.activity-tags {
        margin-top: 21px;
        @include activity-tag();
      }

      div.activity-title {
        margin-top: 59px;
        @include activity-title();
        @include avenir_M();
        font-size: 44px;
        text-align: center;

        .emojione {
          @include emoji-size(30);
        }
      }

      div.activity-author {
        text-align: center;
        width: 100%;

        div.activity-author-inner {
          // float: center;
          margin: auto 1.5em;
          display: inline-block;
          text-align: center;
          @include user-profile(30);

          div.user-avatar-img-conatiner {
            // display: inline-block;
          }

          div.posted-by {
            // display: inline-block;
            margin-left: 38px;
            margin-top: -25px;
            color: #333333;
            opacity: 0.5;
            @include avenir_R();
            font-size: 14px;
          }
        }
      }

      div.activity-body {
        margin-top: 40px;
        @include activity-body(20);
        @include avenir_M();
        color: $oc_gray_7;
        padding-bottom: 50px;
        * {
          color: $oc_gray_7;
        }
        outline: none;
        cursor: text;

        h2 {
          font-size: 26px;
        }

        @include activity-attachment();

        a.media-attachment {
          display: inline-block;

          label.media-attachment-title {
            font-size: 16px;
            margin-top: 4px;
          }

          label.media-attachment-subtitle {
            display: none;
          }
        }
      }
    }
  }

  div.activity-content-footer {
    position: fixed;
    bottom: 0px;
    left: 0px;
    width: 100%;
    height: 72px;
    padding: 21px 32px;
    text-align: center;
    background-color: $oc_gray_8;
    cursor: pointer;

    &:hover {
      div.activity-content-footer-inner {
        div.carrot-logo {
          background-image: cdnUrl("/img/ML/secure_activity_carrot_logo_hover.svg");
        }

        div.you-did-it {
          color: $carrot_dark_brown_1;
        }
      }
    }

    div.activity-content-footer-inner {
      display: inline-block;

      div.carrot-logo {
        width: 17px;
        height: 30px;
        background-image: cdnUrl("/img/ML/secure_activity_carrot_logo.svg");
        background-size: 17px 30px;
        background-repeat: no-repeat;
      }

      div.you-did-it {
        @include avenir_H();
        font-size: 12px;
        color: $carrot_light_gray_4;
        margin-top: -20px;
        margin-left: 38px;
      }
    }
  }
}

